# coin-trading-bot

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run.py  test.py  train.py
.github/: pull_request_template.md
agents/: __init__.py
agents/networks/: __init__.py  classifier.py
config/: __init__.py  model.py
data/: __init__.py  indicators.py  preprocess.py  upbit_api.py  visualization.py
data/preprocess/: ohlcv_data.py
envs/: __init__.py  trading_env.py
etc/: kelly_with_fee.py
models/: __init__.py  price_classifier.pt
scripts/: __init__.py  train_classifier.py
